Load global filters early in tab templates

--- a/app/templates/tab2.html
+++ b/app/templates/tab2.html
@@ -3,6 +3,8 @@
 {% block content %}
     <h2>Open Contracts</h2>
 
+    {% include 'global_filters.html' %}
+
     {% if error %}
         <div class="alert alert-danger" role="alert">
             Error loading contracts: {{ error }}
