--- a/app/templates/tab5.html
+++ b/app/templates/tab5.html
@@ -12,6 +12,8 @@
 {% block content %}
     <h2>Resale/Rental Packs</h2>
 
+    {% include 'global_filters.html' %}
+
     <div class="card">
         <div class="card-body">
             <div class="btn-group">
